[package]
build = 'common/build/build.rs'
edition = '2021'
name = 'ton_abi'
version = '2.4.5'

[dependencies]
base64 = '0.10.0'
byteorder = '1.3.2'
chrono = '0.4.9'
failure = '0.1'
hex = '0.3.2'
num-bigint = '0.4'
num-traits = '0.2'
serde = '1.0.91'
serde_derive = '1.0.91'
serde_json = '1.0.41'
sha2 = '0.10'
ton_block = { git = 'https://github.com/tonlabs/ever-block.git', tag = '1.9.112' }
ton_types = { git = 'https://github.com/tonlabs/ever-types.git', tag = '2.0.31' }

[dev-dependencies]
pretty_assertions = '1.3'

